added connect network
