# controllers/swagger/SocialMedia.js
@@ -11,7 +11,20 @@ module.exports.usersIdConnectNetworkDELETE = function usersIdConnectNetworkDELET
 };
 
 module.exports.usersIdConnectNetworkGET = function usersIdConnectNetworkGET(req, res, next) {
-	SocialMedia.usersIdConnectNetworkGET(req.swagger.params, res, next);
+	SocialMedia.usersIdConnectNetworkGET(req.swagger.params, req, res, next);
+};
+
+module.exports.usersConnectNetworkCallbackGET = function usersConnectNetworkCallbackGET(req, res, next) {
+	SocialMedia.usersConnectNetworkCallbackGET(req.swagger.params, req, res, function (obj) {
+		if (obj.code && obj.message) {
+			res.status(obj.code).end();
+		}
+		else {
+			req.login(obj, function (err) {
+				res.status(204).end(err);
+			});
+		}
+	});
 };
 
 module.exports.usersNetworkIdGET = function usersNetworkIdGET(req, res, next) {
